--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
 .header{
     height: 200px;
     width: 100%;
-    background-color : #E9EEF6;
+    background-color : #bec5d2;
     padding-top: 50px;
+  }
+  .col col-sm-4{
+    display: flex;
+	  align-items: center;
+	  background-color: rgb(233, 233, 233);
+	  border-radius: 10px;
+	  padding: 5px;
+	  margin-bottom: 1.5em;
+    
   }
   .card-container{
     height: 300px;
