--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
     background-color : #bec5d2;
     padding-top: 50px;
   }
-  .col col-sm-4{
+  .col-sm-4{
     display: flex;
 	  align-items: center;
 	  background-color: rgb(233, 233, 233);
