--- a/src/components/signup.css
+++ b/src/components/signup.css
@@ -60,3 +60,25 @@ h2,h3{
     margin-top: 20px;
 }
 
+.logout-form{
+    display: flex;
+    flex-direction: row;
+    margin-left: 90%;
+}
+/* .header text-center .logout-form  */
+#logout {
+    padding: 10px 20px;
+    border: 1px solid rgb(24, 24, 199);
+    margin: auto;
+    transition: .2s;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    overflow: hidden;
+}
+
+#logout:hover{
+    background: #969dc5;
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgb(109, 109, 170), 0 0 25px rgb(109, 109, 170), 0 0 50px rgb(109, 109, 170), 0 0 100px rgb(109, 109, 170);
+}
